# aoc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt
cmake/aoc/: CMakeLists.txt
cmake/aoc/aoc18/: CMakeLists.txt
cmake/aoc/problems/: CMakeLists.txt
cmake/baselib/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
source/aoc/: solver.cpp.sample
source/aoc/cfg/: main.cpp  version.h.in
source/aoc/include/aoc/: error.h  serialize.h  solver.h
source/aoc/src/aoc/: solver.cpp
source/aoc/src/aoc18/d01/: main.cpp  solver.cpp
source/aoc/src/aoc18/d02/: main.cpp  solver.cpp
source/aoc/src/aoc18/d03/: main.cpp  solver.cpp
source/aoc/src/aoc18/d04/: main.cpp  solver.cpp
source/aoc/src/aoc2018/d01/: solver.cpp
source/aoc/src/aoc2018/d02/: solver.cpp
source/aoc/src/aoc2018/d03/: solver.cpp
source/aoc/src/aoc2018/d04/: solver.cpp
source/aoc/src/aoc2018/d05/: solver.cpp
source/aoc/src/aoc2018/d06/: solver.cpp
source/aoc/src/aoc2018/d07/: solver.cpp
source/aoc/src/aoc2018/d08/: solver.cpp
source/aoc/src/aoc2019/d01/: solver.cpp
source/aoc/src/aoc2019/d02/: solver.cpp
source/aoc/src/aoc2019/d03/: solver.cpp
source/aoc/src/aoc2019/d04/: solver.cpp
source/baselib/include/ddr/: porting.h
source/baselib/include/ddr/data/: tree.h
source/baselib/include/ddr/math/: grid.h  hyperbox.h  vector.h
source/baselib/include/ddr/utils/: meta.h  optional_ref.h
source/unittest/include/test/: unittest.h
source/unittest/src/: main.cpp
